fix auth (project id) and minor changes

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "license": "MIT",
   "peerDependencies": {
     "node-fetch": "^2.6.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
