--- a/package.json
+++ b/package.json
@@ -10,5 +10,19 @@
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/deta/deta-javascript.git"
+  },
+  "keywords": [
+    "Deta",
+    "SDK",
+    "for",
+    "Node.js"
+  ],
+  "bugs": {
+    "url": "https://github.com/deta/deta-javascript/issues"
+  },
+  "homepage": "https://github.com/deta/deta-javascript#readme"
 }
