workflows: lint the internal folder not src

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,4 +20,6 @@ jobs:
       run: yarn install
     - name: eslint
       uses: icrawl/action-eslint@v1
+      with:
+        custom-glob: internal
       
