--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Deta",
   "license": "MIT",
   "dependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
     "node-fetch": "^2.6.0"
   },
   "repository": {
@@ -26,8 +30,12 @@
   },
   "homepage": "https://github.com/deta/deta-javascript#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.22.1",
+    "prettier": "^2.2.1"
   }
 }
