npm: swapped airbnb for airbnb-base, removing multiple jsx libs in the process

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "homepage": "https://github.com/deta/deta-javascript#readme",
   "devDependencies": {
+    "acorn-jsx": "^5.3.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-html": "^6.1.2",
