add test for put method

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,6 @@
 {
   "verbose": true,
-  "errorOnDeprecated": true
+  "errorOnDeprecated": true,
+  "bail": true,
+  "globalSetup": "./scripts/jest/globalSetup.js"
 }
