--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.4",
   "description": "Deta library for Javascript",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint -c .eslintrc.js . --ext .ts --fix"
   },
   "main": "./dist/index.js",
   "author": "Deta",
@@ -23,6 +24,13 @@
   },
   "homepage": "https://github.com/deta/deta-javascript#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
 }
