--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,7 +67,8 @@
     "./src"
   ],
   "exclude": [
-    "node_modules",
-    "./__test__"
+    "./node_modules",
+    "./__test__",
+    "./build"
   ]
 }
