--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/deta/deta-javascript#readme",
   "devDependencies": {
+    "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -47,5 +48,8 @@
     "husky": "^6.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
