refactor requests class

--- a/jest.config.json
+++ b/jest.config.json
@@ -3,5 +3,6 @@
   "errorOnDeprecated": true,
   "bail": true,
   "globalSetup": "./scripts/jest/globalSetup.ts",
-  "preset": "ts-jest"
+  "preset": "ts-jest",
+  "modulePathIgnorePatterns": ["build", "node_modules"]
 }
