--- a/jest.config.json
+++ b/jest.config.json
@@ -3,5 +3,6 @@
   "errorOnDeprecated": true,
   "globalSetup": "./scripts/jest/globalSetup.ts",
   "preset": "ts-jest",
-  "modulePathIgnorePatterns": ["build", "node_modules"]
+  "modulePathIgnorePatterns": ["build", "node_modules"],
+  "testTimeout": 30000
 }
