--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "eslint -c .eslintrc.js . --ext .ts",
     "lint:fix": "eslint -c .eslintrc.js . --ext .ts --fix",
     "test": "jest --config jest.config.json --runInBand",
-    "prepare": "husky install",
-    "t": "jest --config jest.config.json --runInBand __test__/drive"
+    "prepare": "husky install"
   },
   "main": "./dist/index.js",
   "author": "Deta",
