--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "description": "Deta library for Javascript",
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c",
     "format": "prettier --write .",
     "lint": "eslint -c .eslintrc.js . --ext .ts",
     "lint:fix": "eslint -c .eslintrc.js . --ext .ts --fix",
@@ -28,6 +28,9 @@
   },
   "homepage": "https://github.com/deta/deta-javascript#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
     "@types/node-fetch": "^2.5.10",
@@ -41,6 +44,8 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "rollup": "^2.47.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
