add more test coverage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -71,6 +71,7 @@
   "exclude": [
     "./node_modules",
     "./build",
-    "./rollup.config.js"
+    "./rollup.config.js",
+    "./coverage"
   ]
 }
