--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test": "jest --config jest.config.json --runInBand",
     "prepare": "husky install"
   },
-  "main": "./dist/index.js",
+  "main": "./build/index.js",
+  "module": "./build/index.es.js",
+  "files": [
+    "build"
+  ],
+  "types": "./build/types/src/index.d.ts",
   "author": "Deta",
   "license": "MIT",
   "repository": {
@@ -46,6 +51,7 @@
     "prettier": "^2.2.1",
     "rollup": "^2.47.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
