--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.4",
   "description": "Deta library for Javascript",
   "scripts": {
+    "prebuild": "rimraf build",
     "build": "rollup -c",
     "format": "prettier --write .",
     "lint": "eslint -c .eslintrc.js . --ext .ts",
@@ -15,7 +16,7 @@
   "files": [
     "build"
   ],
-  "types": "./build/types/src/index.d.ts",
+  "types": "./build/types/index.d.ts",
   "author": "Deta",
   "license": "MIT",
   "repository": {
@@ -49,8 +50,8 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.47.0",
-    "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
