--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint -c .eslintrc.js . --ext .ts",
     "lint:fix": "eslint -c .eslintrc.js . --ext .ts --fix",
     "test": "jest --config jest.config.json --runInBand",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "t": "jest --config jest.config.json --runInBand __test__/drive/put.spec.ts"
   },
   "main": "./build/index.js",
   "module": "./build/index.es.js",
+  "browser": "./build/index.browser.js",
   "files": [
     "build"
   ],
