--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint -c .eslintrc.js . --ext .ts",
     "lint:fix": "eslint -c .eslintrc.js . --ext .ts --fix",
     "test": "jest --config jest.config.json --runInBand",
-    "prepare": "husky install",
-    "t": "jest --config jest.config.json --runInBand __test__/drive/put.spec.ts"
+    "prepare": "husky install"
   },
   "main": "./build/index.js",
   "module": "./build/index.es.js",
