--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "description": "Deta library for Javascript",
   "scripts": {
-    "prebuild": "rimraf build",
+    "prebuild": "rimraf dist",
     "build": "rollup -c",
     "format": "prettier --write .",
     "lint": "eslint -c .eslintrc.js . --ext .ts",
@@ -11,13 +11,13 @@
     "test": "jest --config jest.config.json --runInBand",
     "prepare": "husky install"
   },
-  "main": "./build/index.js",
-  "module": "./build/index.es.js",
-  "browser": "./build/index.browser.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
+  "browser": "./dist/index.browser.js",
   "files": [
-    "build"
+    "dist"
   ],
-  "types": "./build/types/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "author": "Deta",
   "license": "MIT",
   "repository": {
