--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-deta1",
-  "version": "0.0.20",
+  "name": "deta",
+  "version": "0.0.11",
   "description": "Deta library for Javascript",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -12,7 +12,6 @@
     "prepare": "husky install"
   },
   "main": "./dist/index.js",
-  "module": "./dist/index.es.js",
   "browser": "./dist/index.browser.js",
   "files": [
     "dist"
