--- a/.env.test.example
+++ b/.env.test.example
@@ -1,3 +1,5 @@
 PROJECT_KEY=
 DB_NAME=
 DRIVE_NAME=
+USE_AUTH_TOKEN=false # set this to false if you don't want to test using AUTH_TOKEN
+AUTH_TOKEN=
