--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --write .",
     "lint": "eslint -c .eslintrc.js . --ext .ts",
     "lint:fix": "eslint -c .eslintrc.js . --ext .ts --fix",
-    "test": "jest --config jest.config.json --runInBand --coverage",
+    "test": "jest --config jest.config.json --runInBand",
     "prepare": "husky install"
   },
   "main": "./dist/index.js",
