--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deta",
-  "version": "1.2.0",
+  "version": "2.0.0-rc.1",
   "description": "Deta library for Javascript",
   "scripts": {
     "prebuild": "rimraf dist",
