--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --write .",
     "lint": "eslint -c .eslintrc.js . --ext .ts",
     "lint:fix": "eslint -c .eslintrc.js . --ext .ts --fix",
-    "test": "jest --config jest.config.json --runInBand",
+    "test": "mocha",
     "prepare": "husky install"
   },
   "main": "./dist/index.js",
@@ -38,24 +38,36 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/chai": "^4.3.5",
     "@types/jest": "^27.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^15.0.2",
     "@types/node-fetch": "^2.5.10",
+    "@types/sinon": "^10.0.16",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "chai": "^4.3.8",
     "dotenv": "^9.0.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "html-webpack-plugin": "^5.5.3",
     "husky": "^6.0.0",
     "jest": "^27.3.1",
+    "mocha": "^10.2.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.47.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^15.2.0",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.4.4",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "node-fetch": "^2.6.7"
