--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.47.0",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.2.4"
